--- a/app/src/main/res/layout/activity_transactions.xml
+++ b/app/src/main/res/layout/activity_transactions.xml
@@ -27,7 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Account"
+            android:text="Account:"
             android:id="@+id/textView13"
             android:layout_span="4" />
     </TableRow>
@@ -39,7 +39,7 @@
         <Spinner
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/spinner3"
+            android:id="@+id/spinnerAT"
             android:layout_span="4" />
     </TableRow>
 
@@ -51,7 +51,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="From"
+            android:text="From Date:"
             android:id="@+id/textView11"
             android:layout_span="4" />
     </TableRow>
@@ -77,7 +77,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="To"
+            android:text="To Date:"
             android:id="@+id/textView12"
             android:layout_span="4" />
     </TableRow>
@@ -141,7 +141,7 @@
 
         <ListView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="100dp"
             android:id="@+id/listView"
             android:layout_column="0"
             android:layout_span="4" />
