--- a/app/src/main/res/layout/activity_withdrawal.xml
+++ b/app/src/main/res/layout/activity_withdrawal.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Withdraw"
-    android:stretchColumns="*">
+    android:stretchColumns="*"
+    android:id="@+id/withdrawal">
 
     <TableRow
         android:layout_width="fill_parent"
@@ -101,7 +102,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Withdraw"
-            android:id="@+id/trans"
+            android:id="@+id/complete"
             android:layout_below="@+id/button"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
