--- a/app/src/main/res/layout/activity_deposit.xml
+++ b/app/src/main/res/layout/activity_deposit.xml
@@ -118,7 +118,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Deposit"
-            android:id="@+id/Depositbttn"
+            android:id="@+id/complete"
             android:onClick=""
             android:layout_below="@+id/amount"
             android:layout_alignLeft="@+id/textView3"
